--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
         "@testing-library/jest-dom": "^5.11.0",
         "@testing-library/react": "^10.4.3",
         "@testing-library/user-event": "^12.0.11",
+        "@types/cheerio": "^0.22.21",
         "@types/jest": "^26.0.3",
         "@types/node": "^14.0.14",
         "@types/node-fetch": "^2.5.7",
         "@types/react": "^16.9.41",
         "@types/react-dom": "^16.9.8",
+        "cheerio": "^1.0.0-rc.3",
         "framer-motion": "^1.11.1",
         "node-fetch": "^2.6.0",
         "node-pre-gyp": "^0.15.0",
